--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>About us Page</h1>
+        <h1>About Us</h1>
         <form id="name-form">
             <input type="text" id="name" name="name" placeholder="Enter name">
             <button id="magic-button" type="submit">Retrieve Info</button>
